[package]
name = "frida-manager"
version = "0.2.0"
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
anyhow = "1.0.27"
serde_json = "1.0.50"
dirs = "2.0.2"
xz2 = "0.1.6"
rayon = "1.3.0"

[dependencies.reqwest]
version = "0.10.4"
features = ["json", "blocking"]
